--- a/twitterclone/templates/navbar.html
+++ b/twitterclone/templates/navbar.html
@@ -28,7 +28,7 @@
         
         <!-- Right-aligned Link 2 -->
         <div class="col text-end">
-            <a class="nav-link active" href="#">Explore</a>
+            <a class="nav-link active" href="{% url 'explore_profile' %}">Explore</a>
         </div>
     </div>
 </div> 
