added like button with working improve UI Edit tweet added snakecase set appname set

--- a/twitter_clone/templates/register.html
+++ b/twitter_clone/templates/register.html
@@ -88,7 +88,7 @@
 
 <body>
     <div class="main">
-        <h2>Register</h2>
+        <h2>Register Yourself</h2>
         <form method="POST" action="{% url 'register' %}">
             {% csrf_token %}
             {% if form.non_field_errors %}
