--- a/twitter_clone/templates/edit_profile.html
+++ b/twitter_clone/templates/edit_profile.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<style>
+{% comment %} <style>
     body {
         background-color: black;
         color: white;
-    }
+    } {% endcomment %}
 </style>
     <div class="container mt-4">
         <h1>Edit Profile</h1>
@@ -30,4 +30,5 @@
             </div>
         </form>
     </div>
+    
 {% endblock %}
