--- a/twitter_clone/templates/tweet_list.html
+++ b/twitter_clone/templates/tweet_list.html
@@ -96,18 +96,21 @@
     .text-center {
         text-align: center;
     }
-
     .tweet-actions {
         display: flex;
         justify-content: space-between;
         margin-top: 10px;
     }
-
+    
     .tweet-actions i {
         cursor: pointer;
         color: #aaa;
     }
-
+    
+    .tweet-actions i.liked {
+        color: red;
+    }
+    
     .tweet-actions i:hover {
         color: white;
     }
@@ -178,7 +181,7 @@
                             {% endif %}
                             
                             <div>
-                                <h2 class="profile-name">{{ tweet.user.first_name }} {{ tweet.user.last_name }}</h2>
+                                <h4 class="profile-name">{{ tweet.user.profile.first_name }} {{ tweet.user.profile.last_name }}</h4>
                                 <span class="profile-username">@{{ tweet.user.username }}</span>
                             </div>
                         </div>
@@ -186,12 +189,16 @@
                             {{ tweet.content }}
                         </div>
                         <p class="text-muted mt-1">{{ tweet.created_at }}</p>
-
+    
                         <!-- Tweet Actions: Like, Retweet, Reply -->
                         <div class="tweet-actions">
-                            <i class="fas fa-heart"></i> <!-- Like button -->
-                            <i class="fas fa-retweet"></i> <!-- Retweet button -->
-                            <i class="fas fa-reply"></i> <!-- Reply button -->
+                            <i class="fas fa-heart"
+                               data-tweet-id="{{ tweet.id }}"
+                               data-liked="{% if user in tweet.likes.all %}true{% else %}false{% endif %}">
+                            </i>
+                            <i class="fas fa-retweet"></i>
+                            <i class="fas fa-reply"></i>
+                            <span id="like-count-{{ tweet.id }}">{{ tweet.likes.count }}</span>
                         </div>
                     </li>
                 {% endfor %}
@@ -200,5 +207,5 @@
             <p class="text-center">No tweets to display.</p>
         {% endif %}
     </div>
-</div>
+<script src="{% static 'js/script.js' %}"></script>
 {% endblock %}
